iOS alignment issues

--- a/src/components/SignIn/SignIn.css
+++ b/src/components/SignIn/SignIn.css
@@ -49,6 +49,7 @@
 .checkboxInput {
   display: flex;
   margin-bottom: 12px;
+  align-items: center;
 }
 .checkboxInput label {
   font-size: 15px;
